--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
 				<div class="form-input">
 					<label for="ticketRates">套票星級</label>
-					<input type="number" id="ticketRates" name="套票星級" min="1" max="10" placeholder="請填寫套票星級" required>
+					<input type="number" id="ticketRates" name="套票星級" min="1" max="10" placeholder="請填寫套票星級 (1~10級)" required>
 				</div>
 
 				<div class="form-input">
