--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 				<img src="./images/logo.png" alt="logo">
 			</div>
 
-			<form class="addTicket-form">
+			<div class="addTicket-form">
 				<h2><i class="fa-solid fa-plus"></i> 新增旅遊套票</h2>
 
 				<div class="form-input">
@@ -60,7 +60,7 @@
 				</div>
 
 				<input class="addTicket-form-btn" type="button" id="btnAddTicket" name="新增套票" value="新增套票">
-			</form>
+			</div>
 		</section>
 
 		<section class="searchList-container">
