--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 	<meta name="viewport" content="width=device-width, initaial-scale=1.0">
 	<title>Week5</title>
 	<script src="https://kit.fontawesome.com/ae717d84fc.js" crossorigin="anonymous"></script>
+	<script src="https://cdn.jsdelivr.net/npm/axios@1.1.2/dist/axios.min.js"></script>
 	<link rel="stylesheet" type="text/css" href="./style/all.css">
 </head>
 
