--- a/index.html
+++ b/index.html
@@ -65,6 +65,8 @@
 			</form>
 		</section>
 
+		<div class="main" style="width: 600px;height:400px;"></div>
+
 		<section class="searchList-container">
 				<div class="searchList-selector">
 					<div style="display: flex; justify-content: flex-start; align-items: center;">
@@ -80,12 +82,39 @@
 					<div class="searchList-chart"></div>
 				</div>
 
-				<ul class="searchList-result"></ul>
+				<ul class="searchList-result">
+					<li class="searchList-result-card">
+						<div class="searchList-result-wrap">
+							<img src="./images/travel_1.png">
+							<span class="searchList-result-wrap-loc">台北</span>
+							<span class="searchList-result-wrap-rates">8.6</span>
+						</div>
+
+						<div class="searchList-result-content">
+							<div class="searchList-result-content-text">
+								<h3><a href="#">綠島自由行套裝行程</a></h3>
+								<p>嚴選超高CP值綠島自由行套裝行程，多種綠島套裝組合，提供台東綠島來回船票、綠島環島機車、綠島民宿住宿，行程加贈『綠島浮潛體驗』以及『綠島生態導覽』，讓你用輕鬆的綠島套裝自由行，也能深度認識綠島在地文化。</p>
+							</div>
+
+							<div class="searchList-result-content-info">
+								<div class="searchList-result-content-info-stock">
+									<p><i class="fa-solid fa-circle-exclamation" style="color: #00807E; margin-right: 6px;"></i><span>剩下最後 8 組</span></p>
+								</div>
+
+								<div class="searchList-result-content-info-price">
+									<p>TWD</p><span>$1,280</span>
+								</div>
+							</div>
+						</div>
+					</li>
+				</ul>
 		</section>
 
 		<script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/d3/5.16.0/d3.js"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/c3/0.7.18/c3.js"></script>
+
+		<script src="https://cdn.jsdelivr.net/npm/echarts@5.4.3/dist/echarts.min.js"></script>
 
 		<script type="text/javascript" src="./js/app.js"></script>
 	</body>
