--- a/index.html
+++ b/index.html
@@ -65,8 +65,6 @@
 			</form>
 		</section>
 
-		<div class="main" style="width: 600px;height:400px;"></div>
-
 		<section class="searchList-container">
 				<div class="searchList-selector">
 					<div style="display: flex; justify-content: flex-start; align-items: center;">
@@ -79,7 +77,8 @@
 						</select>
 						<p>本次搜尋共 <span>0</span> 筆資料</p>
 					</div>
-					<div class="searchList-chart"></div>
+					<!-- <div class="searchList-chart"></div> -->
+					<div class="searchList-chart" style="width: 300px;height:320px;"></div>
 				</div>
 
 				<ul class="searchList-result">
